# mkdocstrings-native-test

./: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
python/async_trash/: __init__.py  core.pyi
src/: lib.rs
